# hushh-dashboard-signup

./: README.md
b_4HRkprsFJJC-1774344370091/: package-lock.json  package.json
b_4HRkprsFJJC-1774344370091/app/: globals.css  layout.tsx
b_4HRkprsFJJC-1774344370091/backend/: .env  .env.example  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
b_4HRkprsFJJC-1774344370091/backend/app/: main.py
b_4HRkprsFJJC-1774344370091/backend/app/api/: deps.py
b_4HRkprsFJJC-1774344370091/backend/app/api/routes/: __init__.py  events.py  funnel.py  insights.py  summary.py  websocket.py
b_4HRkprsFJJC-1774344370091/backend/app/core/: config.py  database.py  ws_manager.py
b_4HRkprsFJJC-1774344370091/backend/app/models/: event.py  funnel.py
b_4HRkprsFJJC-1774344370091/backend/app/schemas/: event.py  response.py
b_4HRkprsFJJC-1774344370091/backend/app/services/: analytics_service.py  event_service.py  insight_service.py
b_4HRkprsFJJC-1774344370091/backend/app/utils/: helpers.py
b_4HRkprsFJJC-1774344370091/components/: dashboard-header.tsx  dashboard-sidebar.tsx  field-friction-table.tsx  funnel-chart.tsx  impact-scoring-list.tsx  realtime-indicator.tsx  recent-sessions.tsx  summary-cards.tsx
b_4HRkprsFJJC-1774344370091/hooks/: use-analytics.ts  use-realtime.ts
b_4HRkprsFJJC-1774344370091/lib/: api-client.ts  backend-client.ts  db.ts  types.ts
b_4HRkprsFJJC-1774344370091/public/: tracker.js
b_4HRkprsFJJC-1774344370091/scripts/: 001_create_tables.sql  002_create_indexes.sql  003_seed_demo_data.sql  migrate.js  patch-events-table.js  (+3 more)
(+20 files in other folders)
